@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-01-31 18:33:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-31
+
+    Summary:
+      Checkpointing
+    Revision:
+      missingexts--head--0.7--patch-31
+
+
+    modified files:
+     ChangeLog Python/Utils.hs testsrc/Interpretertest.hs
+
+
 2005-01-31 18:22:45 GMT	John Goerzen <jgoerzen@complete.org>	patch-30
 
     Summary:
